feat: adiciona função da tabela mostrar os criterios atuais